Bug 115565 - Unable to use keyboard to move to previous or next toolbox item when Sidebar Navigator deck GotoPage control has focus
Summary: Unable to use keyboard to move to previous or next toolbox item when Sidebar ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords: accessibility
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2018-02-09 02:11 UTC by Jim Raykowski
Modified: 2018-03-29 20:32 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2018-02-09 02:11:06 UTC
When the GotoPage edit spinbox control has the keyboard focus the Esc and Tab key move focus to the deck title. The only way to access items that follow this control using the keyboard is to Tab into the toolbox and use the left arrow key to move backwards through the list of items up to the GotoPage control.

Here are steps to reproduce:

1) open sidebar Navigator deck
2) click on Headings
3) press ESC key
focus rectangle should be around deck title
4) press TAB TAB to enter helper items toolbox
5) use right arrow key to navigate to the GotoPage edit spinbox
cursor blinking in edit spinbox
6) press TAB
focus moves to deck title

I believe better behavior would be for TAB to move to the next item in the toolbox and SHIFT TAB move to the previous item in the toolbox.
Comment 1 Jim Raykowski 2018-02-14 22:25:48 UTC
> I believe better behavior would be for TAB to move to the next item in the
> toolbox and SHIFT TAB move to the previous item in the toolbox.

Just to get out of this control and then the right and left arrow keys would be used to navigate the other items on the toolbox like normal.
Comment 2 Jim Raykowski 2018-02-25 18:37:23 UTC
Here is a patch for this:
https://gerrit.libreoffice.org/#/c/50295/
Comment 3 Buovjaga 2018-03-08 14:12:52 UTC
(In reply to Jim Raykowski from comment #0)
> 6) press TAB
> focus moves to deck title

It actually moves to Headings for me.

Arch Linux 64-bit
Version: 6.1.0.0.alpha0+
Build ID: b8fe96f1da2c42c04a8094ca8c57d49763b7bded
CPU threads: 8; OS: Linux 4.15; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on March 8th 2018
Comment 4 Jim Raykowski 2018-03-09 04:16:53 UTC
n reply to Buovjaga from comment #3)
> (In reply to Jim Raykowski from comment #0)
> > 6) press TAB
> > focus moves to deck title
> 
> It actually moves to Headings for me.
> 

Thanks for the comment!

You are correct. Tab actually does move focus to Headings. 

I must have been testing with half of the patch in place which causes Tab to move focus to the deck title. 

With the entire patch Tab moves to the next focusable item in the toolbox but the patch requires removing a chunk of code that didn't meet approval. 

I am looking for another way to do this.
Comment 5 Jim Raykowski 2018-03-10 08:06:45 UTC
reproduced with: 
Version 5.4.5.1 on Mac OS 10.9.5
and
Version: 5.4.4.2, Build ID: 1:5.4.4~rc2-0ubuntu0.16.04.1~lo1

not reproduce with:
Version 5.4.5.1
Build ID: 1:5.4.5-0ubuntu0.17.10.4

Nevertheless I have modified the patch to work without removing the code chunk.
Comment 6 Buovjaga 2018-03-10 12:02:58 UTC
I confirm with the patch the focus moves from spinbox to Drag mode.

Arch Linux 64-bit
Version: 6.1.0.0.alpha0+
Build ID: 22b1d4784d02070ae1933c59cf2c9bb5a5284773
CPU threads: 8; OS: Linux 4.15; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on March 10th 2018
Comment 7 Commit Notification 2018-03-13 23:35:12 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6d2f6f2f01a4fbf244ba16c355d2f43a2ddf671e

tdf#115565 Change tab key behavior to navigate out of gotopage control

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.