tdf#115565 Change tab key behavior to navigate out of gotopage control

...in Writer Sidebar Navigator deck helper toolbox

Change-Id: Ieeabcb30f421aa0ce2a5f841e45fff5f57358215